raft-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: raft-api
spec:
  selector:
    app: raft
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
  type: NodePort
