raft-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raft-grpc
spec:
  selector:
    app: raft
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
