raft-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raft-rest
spec:
  selector:
    app: raft
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
